--- a/sistema-ventas/src/main/resources/application.properties
+++ b/sistema-ventas/src/main/resources/application.properties
@@ -1,9 +1,26 @@
 spring.application.name=facturacion-electronica
-spring.datasource.url=jdbc:mysql://localhost:3306/facturacion_electronica
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/facturacion_electronica
+#spring.datasource.username=root
+#spring.datasource.password=
+
+
+#spring.datasource.url=jdbc:mysql://restaurante-database:3306/facturacion_electronica?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=1234
+
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username= ${DB_USER_NAME}
+spring.datasource.password= ${DB_PASSWORD}
+
+
+
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
+
+#Soliciono el problema de swagger
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 #spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 api.url.dni = https://dniruc.apisperu.com/api/v1/dni/
