--- a/frontend-app/tsconfig.json
+++ b/frontend-app/tsconfig.json
@@ -1,7 +1,21 @@
 {
+  "compilerOptions": {
+    "strict": true,
+    "noUnusedLocals": false, // make sure this is false to have no errors
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
   "files": [],
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
   ]
 }
